<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="shared_pref">MyPref</string>
    <string name="shared_pref_user_name">user_name</string>
    <string name="math_for_kids">Math\nfor kids</string>
    <string name="multiply">Множення</string>
    <string name="divide">Ділення</string>
    <string name="plus_minus">Додавання і віднімання</string>
    <string name="zadachi">Задачі</string>
    <string name="shop">Магазин</string>
    <string name="left_time">Залишилось: %d</string>
    <string name="result">Твій результат: %d\nБажаю     успіхів!</string>
    <string name="score">Рахунок: %d</string>
    <string name="hard">Важкий</string>
    <string name="medium">Середній</string>
    <string name="easy">Легкий</string>
    <string name="continue_study">Продовжити</string>
    <string name="add_task">Додати задачу</string>
    <string name="continue_without_auth"><u>Продовжити без авторизації</u></string>
    <string name="register_message">Досі немаєш акаунта? <u>Зареєструватись</u></string>
    <string name="auth">Авторизація</string>
    <string name="nickname">Нікнейм</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Зареєструватися</string>
    <string name="registration">Реєстрація</string>
    <string name="log_in">Авторизуватися</string>
    <string name="empty_input_fields">Не всі поля було заповнено</string>
    <string name="try_to_use_another_nickname">Спробуйте використати інший нікнейм, цей нікнейм вже зайнятий</string>
    <string name="registration_error">Під час реєстрації виникла помилка, спробуйте знову</string>
    <string name="task">Задача</string>
    <string name="answer">Відповідь</string>
    <string name="task_was_added_successfully">Задачу додано успішно</string>
    <string name="task_was_not_added">Під час додавання задачі виникла помилка, спробуйте знову</string>
    <string name="auth_error">Сталася помилка під час авторизації, спробуйте ще раз</string>
    <string name="invalid_password">Неправильно введений пароль</string>
    <string name="invalid_nickname">Користувача з таким нікнеймом не було знайдено</string>
    <string name="well_done">Молодець</string>
    <string name="think_better">Подумай краще</string>
    <string name="choose_level_of_task">Обери рівень складності прикладів</string>
    <string name="error_during_loading_tasks">Сталася помилка при завантажені задач, спробуйте знову</string>
    <string name="administrator_registration">Реєстрація адміністратора</string>
    <string name="bought">КУПЛЕНО</string>
    <string name="selected">ОБРАНО</string>
    <string name="hero_has_been_selected">Цей герой вже обраний</string>
    <string name="you_dont_have_enough_coins">На твоєму балансі недостатньо монеток для покупки</string>
</resources>