<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical"
    android:paddingVertical="30dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        tools:src="@drawable/logo_cat" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/comic_relief_bold"
        android:gravity="center"
        android:textColor="#344748"
        android:textSize="26sp"
        android:textStyle="bold"
        tools:text="Обери рівень складності задач " />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/back_for_button_level_hard"
        android:fontFamily="@font/comic_relief_bold"
        android:gravity="center"
        android:text="@string/hard"
        android:textAllCaps="false"
        android:textColor="#344748"
        android:textSize="32sp"
        android:textStyle="bold"
        app:backgroundTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back_for_button_level_medium"
        android:fontFamily="@font/comic_relief_bold"
        android:gravity="center"
        android:text="@string/medium"
        android:textAllCaps="false"
        android:textColor="#344748"
        android:textSize="32sp"
        android:textStyle="bold"
        app:backgroundTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back_for_button_level_easy"
        android:fontFamily="@font/comic_relief_bold"
        android:gravity="center"
        android:text="@string/easy"
        android:textAllCaps="false"
        android:textColor="#344748"
        android:textSize="32sp"
        android:textStyle="bold"
        app:backgroundTint="@null" />
</LinearLayout>