<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_cat"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/registration_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comic_relief_bold"
            android:gravity="center"
            android:lineSpacingMultiplier="0.7"
            android:text="@string/administrator_registration"
            android:textColor="@color/cream"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_rounded_cream_background"
            android:padding="16dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/person_icon"
                android:drawablePadding="16dp"
                android:fontFamily="@font/comic_relief_bold"
                android:hint="@string/nickname"
                android:inputType="text"
                android:maxLines="1"
                android:padding="0dp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/light_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/back_rounded_cream_background"
            android:padding="16dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/key_icon"
                android:drawablePadding="16dp"
                android:fontFamily="@font/comic_relief_bold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="0dp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/light_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/back_for_item"
            android:fontFamily="@font/comic_relief_bold"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/cream"
            android:textSize="18sp"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>